[project]
name = "orionmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pandas==2.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scipy==1.16.1",
    "six==1.17.0",
    "tzdata==2025.2",
]
